@@ -1965,11 +1965,32 @@ prepended to the @env{PATH} so that references to @command{R} or
 running version of @R{}.}.  Finally, if there is a @file{Makefile} and
 it has a @samp{clean:} target, @command{make clean} is run.
 
-Note that it is pointless (and potentially misleading) to include in
-@file{inst/doc} @R{} code files which would be generated from vignettes,
-as these will be re-generated when the package is installed (unless the
-vignette does not generate any @R{} code, in which case it is also
-pointless/misleading).
+All the usual @emph{caveats} about including a @file{Makefile} apply.
+It must be portable (no @acronym{GNU} extensions) and must work
+correctly with a parallel @command{make}: too many authors have written
+things like
+
+@example
+## BAD EXAMPLE
+all: pdf clean
+
+pdf: ABC-intro.pdf ABC-details.pdf
+
+%.pdf:  %.tex
+        texi2dvi --pdf $*
+
+clean:
+        rm *.tex ABC-details-*.pdf 
+@end example
+
+@noindent
+which will start removing the source files whilst @command{pdflatex} is working.
+
+Note that it is pointless (and potentially misleading since the files
+might be outdated) to include in @file{inst/doc} @R{} code files which
+would be generated from vignettes, as these will be re-generated when
+the package is installed (unless the vignette does not generate any @R{}
+code, in which case it is also pointless/misleading).
 
 It is no longer necessary to provide a @file{00Index.dcf} file in the
 @file{inst/doc} directory---the corresponding information is generated
